# meridian-ai

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVPOST_SUBMISSION.md  Dockerfile  HACKATHON_STRATEGY.md  HACKATHON_WINNING_PLAN.md  LICENSE  MERIDIAN_ECOSYSTEM_EXPANSION.md  MERIDIAN_MASTER_STRATEGY.md  Makefile  PRODUCTION.md  QUICKSTART.md  README.md  SECURITY.md  VIDEO_SCRIPT.md  assessment.md  claude_gaps.md  docker-compose.yml  gaps.md  knowledge_mimo.md  mimo_newidea.md  mimogapps.md  prgaps.md  pyproject.toml  render.yaml
.mimocode/: .cron-lock
aws/: deploy.sh  ecs-service.json  ecs-task-definition.json
backend/: Dockerfile  adaptive_assertions.py  agentic_circuit_breaker.py  auth.py  autonomy.py  bias_detector.py  cache.py  cli.py  config.py  cost_tracker.py  cost_writer.py  entity_linker.py  health_score.py  incident_generator.py  logging_config.py  main.py  mcp_server.py  metrics.py  ml_metadata.py  openlineage_emitter.py  persistence.py  pii_propagation.py  provenance_tracker.py  provenance_validator.py  reflexion.py  replay.py  replay_data.json  resilience.py  retry.py  risk_forecaster.py  saga_orchestrator.py  schemas.py  semantic_search.py  sla_tracker.py  stats.py  telemetry.py  training_provenance.py  validation.py
config/: Dockerfile.datahub-gms  application.yaml  start.sh
docs/: API.md  architecture.md  datahub-integration.md  deployment.md  features.md  security.md
examples/: README.md  incident_043_timeline.json  incident_044_timeline.json  incident_42_summary.json  incident_42_timeline.json  resolution_times.json
frontend/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json
scripts/: audit_datahub.py  cleanup_data.py  start.bat  (+19 more)
skill/datahub-meridian-ai/: README.md  SKILL.md  __init__.py  commands.py  pyproject.toml
skill/datahub-meridian-ai/examples/: investigate-model.md
(+114 files in other folders)
