[project]
name = "meridian-ai"
version = "1.0.0"
description = "AI Reliability Engineer for production ML models"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "groq>=0.4.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
meridian = "backend.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]
persistence = [
    "aiosqlite>=0.19.0",
]
all = [
    "meridian-ai[dev,persistence]",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
